--- a/product.html
+++ b/product.html
@@ -10,37 +10,88 @@
   <header class="site-header">
     <div class="container header-inner">
       <a class="brand" href="index.html">
-        <img src="assets/logo.svg" alt="Woo&Miau" class="logo">
+        <img src="assets/logo.svg" alt="Woo & Miau" class="logo">
+        <span class="brand-text">Woo & Miau</span>
       </a>
-      <nav class="nav">
+      <button id="nav-toggle" class="nav-toggle" aria-label="Menü" aria-expanded="false">☰</button>
+      <nav class="nav" aria-label="Fő menü">
         <ul class="nav-list">
           <li class="nav-item"><a href="index.html">Főoldal</a></li>
-          <li class="nav-item"><a href="shop.html">Bolt</a></li>
+          <li class="nav-item has-mega">
+            <button class="dropdown-toggle" aria-expanded="false">Termékek <span class="caret">▾</span></button>
+            <div class="dropdown-menu vertical" role="menu">
+              <ul>
+                <li class="subcat has-flyout" data-for="dogs">
+                  <a href="shop.html?cat=dogs">Kutyáknak</a>
+                  <div class="flyout flyout-right" id="fly-dogs" aria-hidden="true"><ul class="fly-list"></ul></div>
+                </li>
+                <li class="subcat has-flyout" data-for="cats">
+                  <a href="shop.html?cat=cats">Macskáknak</a>
+                  <div class="flyout flyout-right" id="fly-cats" aria-hidden="true"><ul class="fly-list"></ul></div>
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li class="nav-item"><a href="#0">Rólunk</a></li>
+          <li class="nav-item"><a href="#0">Kapcsolat</a></li>
         </ul>
       </nav>
       <div class="header-actions">
-        <a class="btn ghost" href="admin.html">Admin</a>
-        <a class="cart-link" href="cart.html">Kosár (<span id="cart-count">0</span>)</a>
+        <div class="search-wrap">
+          <input id="global-search" class="search-input" type="search" placeholder="Keresés..." aria-label="Keresés">
+          <button class="icon-btn search-btn" aria-label="Keresés">
+            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="11" cy="11" r="6"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
+          </button>
+        </div>
+        <button class="icon-btn user-btn" aria-label="Fiók">
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M20 21v-2a4 4 0 0 0-3-3.87"></path><path d="M4 21v-2a4 4 0 0 1 3-3.87"></path><circle cx="12" cy="7" r="4"></circle></svg>
+        </button>
+        <a class="cart-link" href="cart.html" aria-label="Kosár">
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M6 6h15l-1.5 9h-13z"></path><circle cx="9" cy="20" r="1"></circle><circle cx="19" cy="20" r="1"></circle></svg>
+          <span id="cart-count" class="cart-count">0</span>
+        </a>
       </div>
     </div>
   </header>
 
   <main class="container product-page">
-    <div class="product-detail">
-      <div class="product-media">
-        <img id="product-image" src="assets/placeholder-1.svg" alt="Termék kép">
-      </div>
-      <div class="product-info">
-        <h1 id="product-title">Termék neve</h1>
-        <p id="product-meta">1000 g · Friss · BARF</p>
-        <div class="price"><strong id="product-price">3 499 Ft</strong></div>
-        <p id="product-desc">Rövid leírás placeholder szöveg. Itt részletes összetevők, adagolási információk találhatók.</p>
-        <div class="actions">
-          <label>Darab: <input id="qty" type="number" value="1" min="1"></label>
-          <button id="add-to-cart" class="btn primary">Kosárba teszem</button>
+    <div class="product-detail clean">
+      <div class="product-left">
+        <a href="shop.html" class="btn btn-outline back-btn">← Vissza a boltba</a>
+        <div class="gallery">
+          <div class="gallery-main"><img id="product-image" src="assets/placeholder-1.svg" alt="Termék kép"></div>
+          <div class="gallery-thumbs" id="gallery-thumbs"></div>
         </div>
       </div>
+      <aside class="product-right">
+        <h1 id="product-title">Termék neve</h1>
+        <div class="product-meta-row"><span id="product-meta">1000 g · Friss · BARF</span><span class="rating" id="product-rating">⭐️⭐️⭐️☆☆</span></div>
+        <div class="price"><strong id="product-price">3 499 Ft</strong></div>
+        <p id="product-desc" class="lead">Rövid leírás placeholder szöveg. Itt részletes összetevők, adagolási információk találhatók.</p>
+        <div class="purchase">
+          <label class="qty">Darab: <input id="qty" type="number" value="1" min="1"></label>
+          <div class="purchase-actions"><button id="add-to-cart" class="btn btn-primary">Kosárba teszem</button></div>
+        </div>
+        <div class="product-extra muted" id="product-long-desc">Itt találhatók a részletes összetevők, táplálási utasítások és egyéb információk.</div>
+      </aside>
     </div>
+
+    <section class="container" style="margin-top:20px">
+      <div class="section-header"><h3 class="section-title">Termék adatok és értékelések</h3></div>
+      <div class="product-tabs">
+        <div id="product-details"><h4>Részletek</h4><p id="product-long-desc">Itt találhatók a részletes összetevők, táplálási utasítások és egyéb információk.</p></div>
+        <div id="product-reviews"><h4>Értékelések</h4><div id="reviews-list"><p class="muted">Nincs még értékelés.</p></div></div>
+      </div>
+    </section>
+
+    <section class="container" style="margin-top:20px">
+      <div class="section-header"><h3 class="section-title">Kapcsolódó termékek</h3></div>
+      <div class="product-carousel-wrap">
+        <button class="carousel-arrow prev" data-target="related-products">‹</button>
+        <div id="related-products" class="product-carousel"></div>
+        <button class="carousel-arrow next" data-target="related-products">›</button>
+      </div>
+    </section>
   </main>
 
   <footer class="site-footer">
